<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:paddingVertical="10dp"
    android:background="@drawable/ar_dialog_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/topAr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

            <ImageView
                android:id="@+id/ArBclose"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:layout_marginBottom="-20dp"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:padding="12dp"
                android:src="@drawable/close" />

            <ImageView
                android:id="@+id/logo_dialog"
                android:layout_width="120dp"
                android:layout_height="130dp"
                android:layout_below="@+id/ArBclose"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="20dp"
                android:src="@drawable/exit" />

            <RelativeLayout
                android:id="@+id/text1update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo_dialog"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/txt1"
                    android:layout_width="300sp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:text="@string/confirm_exit"
                    android:textColor="@color/black"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text2"
                    android:layout_width="350sp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt1"
                    android:layout_centerHorizontal="true"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="2"
                    android:text="@string/do_you_wants_to_exit_the_app"
                    android:textColor="#585858"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </RelativeLayout>


            <LinearLayout
                android:id="@+id/dialogview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text1update"
                android:layout_marginTop="1dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="visible">


                <LinearLayout
                    android:id="@+id/aaa"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:background="#ffffff"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <RelativeLayout
                        android:id="@+id/dialog_conform_btn_share"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/ar_edit_text_bg_stylish"
                        android:clickable="true"
                        android:focusable="true"
                        app:cardBackgroundColor="#EBEBEB"
                        app:cardCornerRadius="8dp">

                        <Button
                            android:id="@+id/ArBtnClose"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:background="@drawable/ar_bg_riple_white_rectangle_rate"
                            android:clickable="false"
                            android:focusable="false"
                            android:text="@string/exit_app"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/dialog_conform_btn_"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/ar_btn_green_radius"
                        android:clickable="true"
                        android:focusable="true"
                        app:cardBackgroundColor="#EBEBEB"
                        app:cardCornerRadius="8dp">

                        <Button
                            android:id="@+id/ArBtnRate"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:background="@drawable/ar_bg_riple_white_rectangle_rate"
                            android:clickable="false"
                            android:focusable="false"
                            android:text="@string/rate_us"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </RelativeLayout>

                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>